--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="rightside">
               <img src="./asstes/images/dot.svg" alt="dot" /><span class="lang"
-                >Aze</span
+                >AZE</span
               >
             </div>
           </div>
@@ -42,7 +42,11 @@
                 <a href="/"><i class="fa-solid fa-magnifying-glass"></i></a>
               </li>
               <li class="navItem"><a href="/">Partnyor ol</a></li>
-              <li class="navItem"><a href="/">Kateqoryalar</a></li>
+              <li class="navItem">
+                <a href="/"
+                  >Kateqoryalar<img src="./asstes/images/dot.svg" alt="dot"
+                /></a>
+              </li>
               <li class="navItem">
                 <a href="/"><i class="fa-solid fa-bars"></i></a>
               </li>
@@ -52,7 +56,7 @@
       </div>
     </header>
     <main>
-      <section class="home">
+      <section class="home" id="home">
         <div class="homeContainer">
           <div class="videoContent">
             <video autoplay muted loop id="video-bg">
@@ -208,10 +212,10 @@
                 </div>
                 <div class="productDisc">
                   <h4 class="productTitle">Tempura unu "222"</h4>
-                <p class="productInfo">
-                  HORECA-da, eləcə də şəxsi istifadədə geniş istifadə olunan
-                  yüksək keyfiyyətli tempura unu.
-                </p>
+                  <p class="productInfo">
+                    HORECA-da, eləcə də şəxsi istifadədə geniş istifadə olunan
+                    yüksək keyfiyyətli tempura unu.
+                  </p>
                 </div>
               </div>
             </div>
@@ -222,10 +226,10 @@
                 </div>
                 <div class="productDisc">
                   <h4 class="productTitle">Qarabaşaq əriştəsi "TO DO FOOD"</h4>
-                <p class="productInfo">
-                  HORECA-da, eləcə də şəxsi istifadədə geniş istifadə olunan
-                  yüksək keyfiyyətli tempura unu.
-                </p>
+                  <p class="productInfo">
+                    HORECA-da, eləcə də şəxsi istifadədə geniş istifadə olunan
+                    yüksək keyfiyyətli tempura unu.
+                  </p>
                 </div>
               </div>
             </div>
@@ -236,18 +240,68 @@
                 </div>
                 <div class="productDisc">
                   <h4 class="productTitle">Tempura unu "222"</h4>
-                <p class="productInfo">
-                  HORECA-da, eləcə də şəxsi istifadədə geniş istifadə olunan
-                  yüksək keyfiyyətli tempura unu.
-                </p>
+                  <p class="productInfo">
+                    HORECA-da, eləcə də şəxsi istifadədə geniş istifadə olunan
+                    yüksək keyfiyyətli tempura unu.
+                  </p>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </section>
-      
     </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footerTop">
+          <div class="footerLeft">
+            <div class="footerItem">
+              <ul class="footerList">
+                <li class="footerListItem">
+                  <a href="/"
+                    >Working
+                    <img
+                      src="./asstes/images/footer (2).svg"
+                      alt="icon"
+                    />worldwide.
+                  </a>
+                  <a href="/">Based in Baku.</a>
+                </li>
+                <li class="footerListItem">
+                  <a href="/">Bakı , Səbail, Badamdar, Massiv 3</a>
+                </li>
+                <li class="footerListItem">
+                  <a href="mailto:office@bakuprod.az">office@bakuprod.az</a>
+                  <a href="tel:+994 55 353 02 01">+994 55 353 02 01</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="footerRight">
+            <div class="footerItem">
+              <ul class="footerList">
+                <li class="footerListItem"><a href="/">Məhsullar</a></li>
+                <li class="footerListItem"><a href="/">Haqqımızda</a></li>
+                <li class="footerListItem"><a href="/">Partnyorluq</a></li>
+                <li class="footerListItem"><a href="/">Əlaqə</a></li>
+              </ul>
+            </div>
+            <div class="footerItem">
+              <ul class="footerList">
+                <li class="footerListItem"><a href="/">Facebook</a></li>
+                <li class="footerListItem"><a href="/">Linkedin</a></li>
+                <li class="footerListItem"><a href="/">Instagram</a></li>
+                <li class="footerListItem"><a href="/">Whatsapp</a></li>
+              </ul>
+            </div>
+            <div class="footerItem">
+              <a href="#home"><i class="fa-solid fa-arrow-up"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="footerBottom"></div>
+      </div>
+    </footer>
     <script src="./asstes/js/app.js"></script>
   </body>
 </html>
