--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                 /></a>
               </li>
               <li class="navItem">
-                <a href="/"><i class="fa-solid fa-bars"></i></a>
+                <a href="/"
+                  ><img src="./asstes/images/Menu Veggie Burger.svg" alt=""
+                /></a>
               </li>
             </ul>
           </nav>
@@ -118,9 +120,22 @@
               <div class="numInfo">Ölkə</div>
             </div>
           </div>
-          <div class="partnersCover">
-            <img src="./asstes/images/homeFish.png" alt="Product" />
-          </div>
+          <section class="slider">
+            <div class="swiper mySwiper">
+              <div class="swiper-wrapper partnersSlider">
+                <div class="swiper-slide partnersSlide">
+                  <img src="./asstes/images/homeFish.png" alt="client" />
+                </div>
+                <div class="swiper-slide partnersSlide">
+                  <img src="./asstes/images/homeFish.png" alt="client" />
+                </div>
+                <div class="swiper-slide partnersSlide">
+                  <img src="./asstes/images/homeFish.png" alt="client" />
+                </div>
+              </div>
+              \
+            </div>
+          </section>
         </div>
       </section>
       <section class="partners">
@@ -142,37 +157,37 @@
         <div class="container">
           <div class="swiper mySwiper">
             <div class="swiper-wrapper">
-              <div class="swiper-slide">
+              <div class="swiper-slide clientslider">
                 <img
                   src="./asstes/images/slider images/client1.svg"
                   alt="client"
                 />
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide clientslider">
                 <img
                   src="./asstes/images/slider images/client2.svg"
                   alt="client"
                 />
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide clientslider">
                 <img
                   src="./asstes/images/slider images/client3.svg"
                   alt="client"
                 />
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide clientslider">
                 <img
                   src="./asstes/images/slider images/client4.svg"
                   alt="client"
                 />
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide clientslider">
                 <img
                   src="./asstes/images/slider images/client5.svg"
                   alt="client"
                 />
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide clientslider">
                 <img
                   src="./asstes/images/slider images/client6.svg"
                   alt="client"
@@ -199,52 +214,72 @@
           </div>
         </div>
       </section>
-      <section class="products">
+      <section class="slider">
         <div class="container">
-          <div class="productsContent">
-            <h2 class="produtcsTitle">Yeni məhsullar</h2>
-          </div>
-          
-          <div class="prodCardBox">
-            <div class="productCard">
-              <div class="prodCardItem">
-                <div class="productImage">
-                  <img src="./asstes/images/product1.svg" alt="product" />
-                </div>
-                <div class="productDisc">
-                  <h4 class="productTitle">Tempura unu "222"</h4>
-                  <p class="productInfo">
-                    HORECA-da, eləcə də şəxsi istifadədə geniş istifadə olunan
-                    yüksək keyfiyyətli tempura unu.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="productCard">
-              <div class="prodCardItem">
-                <div class="productImage">
-                  <img src="./asstes/images/product2.svg" alt="product" />
-                </div>
-                <div class="productDisc">
-                  <h4 class="productTitle">Qarabaşaq əriştəsi "TO DO FOOD"</h4>
-                  <p class="productInfo">
-                    HORECA-da, eləcə də şəxsi istifadədə geniş istifadə olunan
-                    yüksək keyfiyyətli tempura unu.
-                  </p>
+          <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide productSlider">
+                <div class="productCard">
+                  <div class="prodCardItem">
+                    <div class="productImage">
+                      <img src="./asstes/images/product1.svg" alt="product" />
+                    </div>
+                    <div class="productDisc">
+                      <h4 class="productTitle">Tempura unu "222"</h4>
+                      <p class="productInfo">
+                        HORECA-da, eləcə də şəxsi istifadədə geniş istifadə
+                        olunan yüksək keyfiyyətli tempura unu.
+                      </p>
+                    </div>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="productCard">
-              <div class="prodCardItem">
-                <div class="productImage">
-                  <img src="./asstes/images/product1.svg" alt="product" />
+              <div class="swiper-slide productSlider">
+                <div class="productCard">
+                  <div class="prodCardItem">
+                    <div class="productImage">
+                      <img src="./asstes/images/product1.svg" alt="product" />
+                    </div>
+                    <div class="productDisc">
+                      <h4 class="productTitle">Tempura unu "222"</h4>
+                      <p class="productInfo">
+                        HORECA-da, eləcə də şəxsi istifadədə geniş istifadə
+                        olunan yüksək keyfiyyətli tempura unu.
+                      </p>
+                    </div>
+                  </div>
                 </div>
-                <div class="productDisc">
-                  <h4 class="productTitle">Tempura unu "222"</h4>
-                  <p class="productInfo">
-                    HORECA-da, eləcə də şəxsi istifadədə geniş istifadə olunan
-                    yüksək keyfiyyətli tempura unu.
-                  </p>
+              </div>
+              <div class="swiper-slide productSlider">
+                <div class="productCard">
+                  <div class="prodCardItem">
+                    <div class="productImage">
+                      <img src="./asstes/images/product1.svg" alt="product" />
+                    </div>
+                    <div class="productDisc">
+                      <h4 class="productTitle">Tempura unu "222"</h4>
+                      <p class="productInfo">
+                        HORECA-da, eləcə də şəxsi istifadədə geniş istifadə
+                        olunan yüksək keyfiyyətli tempura unu.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide productSlider">
+                <div class="productCard">
+                  <div class="prodCardItem">
+                    <div class="productImage">
+                      <img src="./asstes/images/product1.svg" alt="product" />
+                    </div>
+                    <div class="productDisc">
+                      <h4 class="productTitle">Tempura unu "222"</h4>
+                      <p class="productInfo">
+                        HORECA-da, eləcə də şəxsi istifadədə geniş istifadə
+                        olunan yüksək keyfiyyətli tempura unu.
+                      </p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
