--- a/index.html
+++ b/index.html
@@ -42,10 +42,130 @@
                 <a href="/"><i class="fa-solid fa-magnifying-glass"></i></a>
               </li>
               <li class="navItem"><a href="/">Partnyor ol</a></li>
-              <li class="navItem">
-                <a href="/"
-                  >Kateqoryalar<img src="./asstes/images/dot.svg" alt="dot"
-                /></a>
+              <li class="navItem navItemMenu">
+                <button class="menu-toggle">
+                  Kateqorylar<img src="./asstes/images/dot.svg" alt="dot" />
+                </button>
+                <div class="menu-content">
+                  <div class="close">
+                    <div class="closeButton">
+                      <span class="closespan"><i class="fa-solid fa-xmark"></i></span>
+                      <span class="closespan">Bağla</span>
+                    </div>
+                  </div>
+
+                  <section class="slider">
+                    <div class="swiper mySwiper">
+                      <div class="swiper-wrapper categorieSlider">
+                        <div class="swiper-slide categorieSlide">
+                          <div class="categorieCard">
+                            <div class="categorieImage">
+                              <img src="./asstes/images/category1.png" alt="" />
+                            </div>
+
+                            <div class="categorieInfo">
+                              <a href="/" class="">Dəniz məhsulları</a>
+                              <img
+                                src="./asstes/images/arrow-circle-right.svg"
+                                alt=""
+                              />
+                            </div>
+                          </div>
+                        </div>
+                        <div class="swiper-slide categorieSlide">
+                          <div class="categorieCard">
+                            <div class="categorieImage">
+                              <img src="./asstes/images/category2.png" alt="" />
+                            </div>
+
+                            <div class="categorieInfo">
+                              <a href="/" class="">Süd və yağ məhsulları</a>
+                              <img
+                                src="./asstes/images/arrow-circle-right.svg"
+                                alt=""
+                              />
+                            </div>
+                          </div>
+                        </div>
+                        <div class="swiper-slide categorieSlide">
+                          <div class="categorieCard">
+                            <div class="categorieImage">
+                              <img src="./asstes/images/category3.png" alt="" />
+                            </div>
+
+                            <div class="categorieInfo">
+                              <a href="/" class=""> Asiya mətbəxi </a>
+                              <img
+                                src="./asstes/images/arrow-circle-right.svg"
+                                alt=""
+                              />
+                            </div>
+                          </div>
+                        </div>
+                        <div class="swiper-slide categorieSlide">
+                          <div class="categorieCard">
+                            <div class="categorieImage">
+                              <img src="./asstes/images/category4.png" alt="" />
+                            </div>
+
+                            <div class="categorieInfo">
+                              <a href="/" class="">Souslar və bakaleya</a>
+                              <img
+                                src="./asstes/images/arrow-circle-right.svg"
+                                alt=""
+                              />
+                            </div>
+                          </div>
+                        </div>
+                        <div class="swiper-slide categorieSlide">
+                          <div class="categorieCard">
+                            <div class="categorieImage">
+                              <img src="./asstes/images/category5.png" alt="" />
+                            </div>
+
+                            <div class="categorieInfo">
+                              <a href="/" class="">Meyvə və tərəvəzlər</a>
+                              <img
+                                src="./asstes/images/arrow-circle-right.svg"
+                                alt=""
+                              />
+                            </div>
+                          </div>
+                        </div>
+                        <div class="swiper-slide categorieSlide">
+                          <div class="categorieCard">
+                            <div class="categorieImage">
+                              <img src="./asstes/images/category6.png" alt="" />
+                            </div>
+
+                            <div class="categorieInfo">
+                              <a href="/" class="">Digər məhsullar</a>
+                              <img
+                                src="./asstes/images/arrow-circle-right.svg"
+                                alt=""
+                              />
+                            </div>
+                          </div>
+                        </div>
+                        <div class="swiper-slide categorieSlide">
+                          <div class="categorieCard">
+                            <div class="categorieImage">
+                              <img src="./asstes/images/category6.png" alt="" />
+                            </div>
+
+                            <div class="categorieInfo">
+                              <a href="/" class="">Dəniz məhsulları</a>
+                              <img
+                                src="./asstes/images/arrow-circle-right.svg"
+                                alt=""
+                              />
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </section>
+                </div>
               </li>
               <li class="navItem">
                 <a href="/"
@@ -133,7 +253,6 @@
                   <img src="./asstes/images/homeFish.png" alt="client" />
                 </div>
               </div>
-              \
             </div>
           </section>
         </div>
@@ -335,7 +454,14 @@
             </div>
           </div>
         </div>
-        <div class="footerBottom"></div>
+        <div class="footerBottom">
+          <div class="footerItem">
+            <a href="/">© “BAKU PROD” LLC. All rights reserved. </a>
+          </div>
+          <div class="footerItem">
+            <a href="/">Safaroff Agency tərəfindən hazırlanmışdır</a>
+          </div>
+        </div>
       </div>
     </footer>
     <script src="./asstes/js/app.js"></script>
