Added mobile menu.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     ></script>
   </head>
   <body>
+    <!-- Start Header -->
     <header class="header">
       <div class="container">
         <div class="headerContent">
@@ -30,16 +31,32 @@
               <a href="/"><img src="./asstes/images/logo.svg" alt="Logo" /></a>
             </div>
             <div class="rightside">
-              <img src="./asstes/images/dot.svg" alt="dot" /><span class="lang"
-                >AZE</span
-              >
+              <button class="langBtn">
+                <img src="./asstes/images/dot.svg" alt="dot" /><span
+                  class="lang"
+                  >AZE</span
+                >
+              </button>
+              <ul class="langList">
+                <li class="langItem">
+                  <img src="asstes/images/aze.png" alt="flag" /> AZE
+                </li>
+                <li class="langItem">
+                  <img src="asstes/images/eng.png" alt="flag" /> ENG
+                </li>
+                <li class="langItem">
+                  <img src="asstes/images/ru.png" alt="flag" /> RUS
+                </li>
+              </ul>
             </div>
           </div>
 
           <nav class="navBar">
             <ul class="navList">
               <li class="navItem">
-                <a href="/"><i class="fa-solid fa-magnifying-glass"></i></a>
+                <a href=""
+                  ><img src="./asstes/images/search-normal.svg" alt="icon"
+                /></a>
               </li>
               <li class="navItem"><a href="/">Partnyor ol</a></li>
               <li class="navItem navItemMenu">
@@ -48,10 +65,12 @@
                 </button>
                 <div class="menu-content">
                   <div class="close">
-                    <div class="closeButton">
-                      <span class="closespan"><i class="fa-solid fa-xmark"></i></span>
-                      <span class="closespan">Bağla</span>
-                    </div>
+                    <button class="closeButton">
+                      <span class="closespan"
+                        ><i class="fa-solid fa-xmark"></i
+                      ></span>
+                      Bağla
+                    </button>
                   </div>
 
                   <section class="slider">
@@ -63,13 +82,14 @@
                               <img src="./asstes/images/category1.png" alt="" />
                             </div>
 
-                            <div class="categorieInfo">
-                              <a href="/" class="">Dəniz məhsulları</a>
-                              <img
-                                src="./asstes/images/arrow-circle-right.svg"
-                                alt=""
-                              />
-                            </div>
+                            <a href="/"
+                              ><div class="categorieInfo">
+                                Dəniz məhsulları
+                                <img
+                                  src="./asstes/images/arrow-circle-right.svg"
+                                  alt=""
+                                /></div
+                            ></a>
                           </div>
                         </div>
                         <div class="swiper-slide categorieSlide">
@@ -78,13 +98,14 @@
                               <img src="./asstes/images/category2.png" alt="" />
                             </div>
 
-                            <div class="categorieInfo">
-                              <a href="/" class="">Süd və yağ məhsulları</a>
-                              <img
-                                src="./asstes/images/arrow-circle-right.svg"
-                                alt=""
-                              />
-                            </div>
+                            <a href="/"
+                              ><div class="categorieInfo">
+                                Süd və yağ məhsulları
+                                <img
+                                  src="./asstes/images/arrow-circle-right.svg"
+                                  alt=""
+                                /></div
+                            ></a>
                           </div>
                         </div>
                         <div class="swiper-slide categorieSlide">
@@ -93,13 +114,14 @@
                               <img src="./asstes/images/category3.png" alt="" />
                             </div>
 
-                            <div class="categorieInfo">
-                              <a href="/" class=""> Asiya mətbəxi </a>
-                              <img
-                                src="./asstes/images/arrow-circle-right.svg"
-                                alt=""
-                              />
-                            </div>
+                            <a href="/"
+                              ><div class="categorieInfo">
+                                Asiya mətbəxi
+                                <img
+                                  src="./asstes/images/arrow-circle-right.svg"
+                                  alt=""
+                                /></div
+                            ></a>
                           </div>
                         </div>
                         <div class="swiper-slide categorieSlide">
@@ -108,13 +130,15 @@
                               <img src="./asstes/images/category4.png" alt="" />
                             </div>
 
-                            <div class="categorieInfo">
-                              <a href="/" class="">Souslar və bakaleya</a>
-                              <img
-                                src="./asstes/images/arrow-circle-right.svg"
-                                alt=""
-                              />
-                            </div>
+                            <a href="/">
+                              <div class="categorieInfo">
+                                Souslar və bakaleya
+                                <img
+                                  src="./asstes/images/arrow-circle-right.svg"
+                                  alt=""
+                                />
+                              </div>
+                            </a>
                           </div>
                         </div>
                         <div class="swiper-slide categorieSlide">
@@ -123,13 +147,14 @@
                               <img src="./asstes/images/category5.png" alt="" />
                             </div>
 
-                            <div class="categorieInfo">
-                              <a href="/" class="">Meyvə və tərəvəzlər</a>
-                              <img
-                                src="./asstes/images/arrow-circle-right.svg"
-                                alt=""
-                              />
-                            </div>
+                            <a href="/"
+                              ><div class="categorieInfo">
+                                Meyvə və tərəvəzlər
+                                <img
+                                  src="./asstes/images/arrow-circle-right.svg"
+                                  alt=""
+                                /></div
+                            ></a>
                           </div>
                         </div>
                         <div class="swiper-slide categorieSlide">
@@ -138,13 +163,14 @@
                               <img src="./asstes/images/category6.png" alt="" />
                             </div>
 
-                            <div class="categorieInfo">
-                              <a href="/" class="">Digər məhsullar</a>
-                              <img
-                                src="./asstes/images/arrow-circle-right.svg"
-                                alt=""
-                              />
-                            </div>
+                            <a href="/"
+                              ><div class="categorieInfo">
+                                Digər məhsullar
+                                <img
+                                  src="./asstes/images/arrow-circle-right.svg"
+                                  alt=""
+                                /></div
+                            ></a>
                           </div>
                         </div>
                         <div class="swiper-slide categorieSlide">
@@ -153,13 +179,14 @@
                               <img src="./asstes/images/category6.png" alt="" />
                             </div>
 
-                            <div class="categorieInfo">
-                              <a href="/" class="">Dəniz məhsulları</a>
-                              <img
-                                src="./asstes/images/arrow-circle-right.svg"
-                                alt=""
-                              />
-                            </div>
+                            <a href="/"
+                              ><div class="categorieInfo">
+                                Dəniz məhsulları
+                                <img
+                                  src="./asstes/images/arrow-circle-right.svg"
+                                  alt=""
+                                /></div
+                            ></a>
                           </div>
                         </div>
                       </div>
@@ -167,16 +194,68 @@
                   </section>
                 </div>
               </li>
-              <li class="navItem">
-                <a href="/"
-                  ><img src="./asstes/images/Menu Veggie Burger.svg" alt=""
-                /></a>
-              </li>
+              <button class="navItem burgerMenu">
+                
+                  <img src="./asstes/images/Menu Veggie Burger.svg" alt=""
+                />
+              </button>
             </ul>
           </nav>
         </div>
       </div>
+      <div class="mobileMenu">
+        <ul class="mobileList">
+          <li class="mobileİtem">Kateqoryalar <img class="arrowImg" src="./asstes/images/arrowbottom.svg" alt="arrow"></li>
+          <ul class="categoriesMobileList">
+            <li class="categoriesMobileİtem">
+              <div class="categorieCard">
+                <div class="categorieImage">
+                  <img src="./asstes/images/category1.png" alt="" />
+                </div>
+
+                <div class="categorieInfo">
+                  <a href="/">Dəniz məhsulları</a>
+                </div>
+              </div>
+            </li>
+            <li class="categoriesMobileİtem">
+              <div class="categorieCard">
+                <div class="categorieImage">
+                  <img src="./asstes/images/category2.png" alt="" />
+                </div>
+
+                <div class="categorieInfo">
+                  <a href="/">Süd və yağ məhsulları</a>
+                </div>
+              </div>
+            </li>
+            <li class="categoriesMobileİtem">
+              <div class="categorieCard">
+                <div class="categorieImage">
+                  <img src="./asstes/images/category3.png" alt="" />
+                </div>
+
+                <div class="categorieInfo">
+                  <a href="/">Asiya mətbəxi </a>
+                </div>
+              </div>
+            </li>
+            <li class="categoriesMobileİtem">
+              <div class="categorieCard">
+                <div class="categorieImage">
+                  <img src="./asstes/images/category4.png" alt="" />
+                </div>
+
+                <div class="categorieInfo">
+                  <a href="/">Souslar və bakaleya</a>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </ul>
+      </div>
     </header>
+    <!-- End Header -->
     <main>
       <section class="home" id="home">
         <div class="homeContainer">
