--- a/index.html
+++ b/index.html
@@ -195,9 +195,7 @@
                 </div>
               </li>
               <button class="navItem burgerMenu">
-                
-                  <img src="./asstes/images/Menu Veggie Burger.svg" alt=""
-                />
+                <img src="./asstes/images/Menu Veggie Burger.svg" alt="" />
               </button>
             </ul>
           </nav>
@@ -205,9 +203,16 @@
       </div>
       <div class="mobileMenu">
         <ul class="mobileList">
-          <li class="mobileİtem">Kateqoryalar <img class="arrowImg" src="./asstes/images/arrowbottom.svg" alt="arrow"></li>
+          <li class="mobileItem">
+            Kateqoryalar
+            <img
+              class="arrowImg"
+              src="./asstes/images/arrowbottom.svg"
+              alt="arrow"
+            />
+          </li>
           <ul class="categoriesMobileList">
-            <li class="categoriesMobileİtem">
+            <li class="categoriesMobileItem">
               <div class="categorieCard">
                 <div class="categorieImage">
                   <img src="./asstes/images/category1.png" alt="" />
@@ -218,7 +223,7 @@
                 </div>
               </div>
             </li>
-            <li class="categoriesMobileİtem">
+            <li class="categoriesMobileItem">
               <div class="categorieCard">
                 <div class="categorieImage">
                   <img src="./asstes/images/category2.png" alt="" />
@@ -229,7 +234,7 @@
                 </div>
               </div>
             </li>
-            <li class="categoriesMobileİtem">
+            <li class="categoriesMobileItem">
               <div class="categorieCard">
                 <div class="categorieImage">
                   <img src="./asstes/images/category3.png" alt="" />
@@ -240,7 +245,7 @@
                 </div>
               </div>
             </li>
-            <li class="categoriesMobileİtem">
+            <li class="categoriesMobileItem">
               <div class="categorieCard">
                 <div class="categorieImage">
                   <img src="./asstes/images/category4.png" alt="" />
@@ -288,10 +293,14 @@
               <span class="special">fərqli və xüsusi</span> çeşidlərinin ölkəyə
               idxalı
             </p>
-            <p class="companyText">
-              Hotel, restoran, kafe sektoruna professional mətbəx <br />
-              məhsulları təklif edən aparıcı şirkətlərdən biri olmaqla tanınır.
-            </p>
+            <div class="companyInfo">
+             <div class="companyIcon"> <img src="./asstes/images/star.svg" alt="icon" /></div>
+              <p class="companyText">
+                Hotel, restoran, kafe sektoruna professional mətbəx 
+                məhsulları təklif edən aparıcı şirkətlərdən biri olmaqla
+                tanınır.
+              </p>
+            </div>
           </div>
         </div>
       </section>
@@ -405,7 +414,7 @@
               Amerika Birləşmiş Ştatları, Birləşmiş Ərəb Əmirlikləri, İspaniya,
               Tayland, Hindistan, Rusiya, Belarusiya idxal edilən 200+ məhsul.
             </p>
-            <div class="partnersBtn"><a href="/">Bizimlə partnyorluq</a></div>
+            <div class="partnersBtn"><a href="/">Bizimlə partnyor ol</a></div>
           </div>
           <div class="partnerWallpaper">
             <img src="./asstes/images/partnersCover.png" alt="Image" />
